# OhosNdkForRustDemo

./: LICENSE  README.md
doc/: 自定义target命名不同导致编译过程不同的示例.md
entry/: .gitignore  build.gradle
entry/src/main/: config.json
entry/src/main/cpp/: CMakeLists.txt  hello.cpp
entry/src/main/java/ml/nn2ai/ohosndk/: MainAbility.java  MyApplication.java
entry/src/main/java/ml/nn2ai/ohosndk/slice/: MainAbilitySlice.java
entry/src/main/rust/: .gitignore  CMakeLists.txt  Cargo.toml  aarch64-linux-ohos-win.json  aarch64-linux-ohos.json  bridge.cpp  build.bat  build.sh
entry/src/main/rust/.cargo/: config.toml
entry/src/main/rust/scripts/: linker_wrapper.sh  make_linker_wrapper.bat  make_linker_wrapper.sh
entry/src/main/rust/src/: lib.rs
entry/src/main/tool/: Cargo.toml
entry/src/ohosTest/java/ml/nn2ai/ohosndk/: ExampleOhosTest.java
entry/src/test/java/ml/nn2ai/ohosndk/: ExampleTest.java
